--- a/tutorial1.html
+++ b/tutorial1.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
+<!-- This tutorial was originally copied from http://learningwebgl.com/blog/?p=28 (Thanks to the author of that blog/tutorial!!)
+        and modified (using comments below the tutorial that gave hints as to problems - had to change two lines to make it work).
+        I also made two more functions that reduce the number of lines in the tutorial / make it a bit easier. -->
 <html>
 	<head>
+                <!--Including the current minimized gl-matrix.js for ease of access for this tutorial
+                       and to make sure that people doing this tutorial have the same version of gl-matrix that I used.
+                        I did not make this javascript API - for the authoritative version / most current update, go to
+                        https://github.com/toji/gl-matrix 
+			Note:  there's also a separate website for gl-matrix:  http://glmatrix.net/ -->
 		<script src="gl-matrix-min.js" type="text/javascript"></script>
 		<script type="text/javascript">
 
