Added the link to the other page I was looking at to the tutorial1.html

--- a/tutorial1.html
+++ b/tutorial1.html
@@ -11,6 +11,8 @@
                         https://github.com/toji/gl-matrix 
 			Note:  there's also a separate website for gl-matrix:  http://glmatrix.net/ -->
 		<script src="gl-matrix-min.js" type="text/javascript"></script>
+                <!-- One more resource I had open in the tab just before this tutorial:
+			https://dev.opera.com/articles/introduction-to-webgl-part-1/   -->
 		<script type="text/javascript">
 
 			var triangleVerticePositionBuffer;
